TZ8refactor